--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,21 @@
 
 server.port = 8081
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:employee_db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+
+# MYSQL Configuration
+spring.datasource.url = jdbc:mysql://localhost:3306/employee_db
+spring.datasource.username = root
+spring.datasource.password = nishanth
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+
+
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:employee_db
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=update
